centered text and fixed alignment and color

--- a/public/main.css
+++ b/public/main.css
@@ -6,6 +6,8 @@ body{
   background-attachment: fixed;
   opacity: 50%;
   font-family: "Arial";
+  text-align: center;
+  color: gray;
   }
 
 /* FOOTER */
@@ -39,6 +41,7 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 input[type=submit] {
@@ -61,7 +64,6 @@ div {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    padding-top: 250px;
 }
 
 /* NAV BAR */
@@ -73,7 +75,7 @@ ul.topnav {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: lightblue;
 }
 
 ul.topnav li {float: left;}
@@ -87,7 +89,7 @@ ul.topnav li a {
 }
 
 ul.topnav li a:hover:not(.active) {
-  background-color: #111;
+  background-color: lightpink;
 }
 
 ul.topnav li a.active {
